# hauth

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
hauth/: __init__.py  client.py
hauth/aiohttp/: __init__.py  core.py  dependencies.py
hauth/assets/: js.js  login.html
hauth/fastapi/: __init__.py  core.py  dependencies.py
hauth/models/: __init__.py  config.py  localization.py  request.py  session.py
hauth/modules/: __init__.py  fprocessor.py  geetest.py  utility.py
hauth/storages/: __init__.py  base.py  memory.py  postgres.py
